--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 typing~=3.6.6
 torchtext~=0.4.0
-torch~=1.4.0
+torch==1.13
 numpy~=1.18.1
 pyyaml~=5.1
 sacrebleu~=1.4.2
@@ -14,9 +14,10 @@ tabulate~=0.8.3
 oyaml~=0.9
 umap~=0.1.1
 scikit-learn~=0.22.2.post1
-sentencepiece~=0.1.85
+sentencepiece==0.1.85
 gensim~=3.8.0
 sacremoses~=0.0.35
 scipy~=1.2.1
 glob2~=0.6
 visdom~=0.1.8.9
+tensorboard
